<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asd.heaterproject.EnvironmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/hikingBackground3"
        >
        <TextView android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingBottom="15sp"
            android:layout_marginRight="16sp"
            android:layout_marginLeft="16sp"
            android:textColor="@color/hikingTextColor"
            android:text="Welcome to the Hiking portion of this application"
            />

            <TextView android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:paddingBottom="15sp"
            android:textColor="@color/hikingTextColor"
            android:text="@string/appDescription1"
            />

        <TextView android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:paddingBottom="15sp"
            android:textColor="@color/hikingTextColor"
            android:text="@string/appDescription2"
            />

        <TextView android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:paddingBottom="25sp"
            android:textColor="@color/hikingTextColor"
            android:text="@string/appDescription3"
            />

        <Button android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            android:padding="15sp"
            android:textColor="@color/hikingTextColor"
            android:background="@drawable/rounded0"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
